fix: add getWordsEndingWith & getWordsStartingWith on client, controller, service, and test